force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/Vehicle_Purchase_Order_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Vehicle Purchase Order Line Items</label>
    <nameField>
        <displayFormat>POLI-{YYYY}{MM}-{000}</displayFormat>
        <label>Vehicle Purchase Order Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>