force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Colour_Description__c.field-meta.xml
<CustomField>
    <fullName>Colour_Description__c</fullName>
    <formula>Color_Master__r.Color_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour Description</label>
    <type>Text</type>
</CustomField>