force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>