force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Model_Color_Trim_Master__c.field-meta.xml
<CustomField>
    <fullName>Model_Color_Trim_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model Color Trim Master</label>
    <referenceTo>Model_Color_Trim_Master__c</referenceTo>
    <relationshipLabel>Vehicle Purchase Order Line Items</relationshipLabel>
    <relationshipName>Vehicle_Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>