force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Model_Year_Master__c.field-meta.xml
<CustomField>
    <fullName>Model_Year_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Variant Year</label>
    <referenceTo>Model_Year_Master__c</referenceTo>
    <relationshipLabel>Vehicle Purchase Order Line Items</relationshipLabel>
    <relationshipName>Vehicle_Purchase_Order_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>