force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_CIF_Amount__c.field-meta.xml
<CustomField>
    <fullName>TMS_CIF_Amount__c</fullName>
    <formula>Unit_Price__c +  TMS_Insurance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS CIF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>