force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Duty_Percent__c.field-meta.xml
<CustomField>
    <fullName>TMS_Duty_Percent__c</fullName>
    <defaultValue>150</defaultValue>
    <label>TMS Estimated Duty %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>