force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Estimated_Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>TMS_Estimated_Duty_Amount__c</fullName>
    <formula>TMS_CIF_Amount__c  *  TMS_Duty_Percent__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS Estimated Duty/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>