force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_FOB_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>TMS_FOB_Currency_Code__c</fullName>
    <label>TMS FOB Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>