force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Insurance1__c.field-meta.xml
<CustomField>
    <fullName>TMS_Insurance1__c</fullName>
    <formula>TMS_Insurance__r.Insurance_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS Insurance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>