force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Insurance__c.field-meta.xml
<CustomField>
    <fullName>TMS_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMS Insurance Franchise Code</label>
    <referenceTo>TMS_Insurance__c</referenceTo>
    <relationshipLabel>Vehicle Purchase Order Line Items</relationshipLabel>
    <relationshipName>Vehicle_Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>