force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>TMS_Insurance_Amount__c</fullName>
    <formula>Total_Price__c* TMS_Insurance1__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS Insurance/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>