force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Total_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>TMS_Total_Insurance_Amount__c</fullName>
    <formula>Units_Confirmed__c* TMS_Insurance_Amount__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS Total Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>