force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/TMS_Total_PO_Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>TMS_Total_PO_Duty_Amount__c</fullName>
    <formula>Units_Confirmed__c  *  TMS_Estimated_Duty_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMS Total PO Duty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>