force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>Units_Ordered__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TMS Estimated FOB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>