force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Trim_Description__c.field-meta.xml
<CustomField>
    <fullName>Trim_Description__c</fullName>
    <formula>Trim_Master__r.Trim_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trim Description</label>
    <type>Text</type>
</CustomField>