force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Units_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Units_Confirmed__c</fullName>
    <label>Units Confirmed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>