force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Units_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Units_Ordered__c</fullName>
    <label>Units Ordered</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>