force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Units_Pending__c.field-meta.xml
<CustomField>
    <fullName>Units_Pending__c</fullName>
    <formula>Units_Ordered__c -  Units_Cancelled__c -  Units_Confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>