force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Variant_Description__c.field-meta.xml
<CustomField>
    <fullName>Variant_Description__c</fullName>
    <formula>Model_Master__r.Model_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant Description</label>
    <type>Text</type>
</CustomField>