force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/fields/Vehicle_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_Order__c</fullName>
    <label>Vehicle Purchase Order</label>
    <referenceTo>Vehicle_Purchase_Order__c</referenceTo>
    <relationshipLabel>Vehicle Purchase Order Line Items</relationshipLabel>
    <relationshipName>Vehicle_Purchase_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>