force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/recordTypes/MF_POLI.recordType-meta.xml
<RecordType>
    <fullName>MF_POLI</fullName>
    <active>true</active>
    <label>MF/DPS Purchase Order Line Items</label>
</RecordType>