force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/validationRules/No_Negative_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Units</fullName>
    <active>true</active>
    <errorConditionFormula>Units_Ordered__c &lt; 0
||
Units_Confirmed__c &lt; 0
||
Units_Cancelled__c &lt;0
||
Unit_Price__c &lt; 0</errorConditionFormula>
    <errorMessage>FOB Price, Units Ordered, Units Confirmed and Units Cancelled can not be negative.</errorMessage>
</ValidationRule>