force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/validationRules/PO_is_cancelled_then_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_is_cancelled_then_cannot_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT(ISNEW()),
ISPICKVAL(Vehicle_Purchase_Order__r.Stage__c, &apos;Cancelled&apos;)
)</errorConditionFormula>
    <errorMessage>After PO stage  is cancelled, PO and POLI cannot be edited or reverted to previous stage.</errorMessage>
</ValidationRule>