force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/validationRules/Two_UC_must_be_small_than_Units_Ordered.validationRule-meta.xml
<ValidationRule>
    <fullName>Two_UC_must_be_small_than_Units_Ordered</fullName>
    <active>true</active>
    <description>Units Confirmed + Unit Cancelled can&apos;t be larger than Units Ordered.</description>
    <errorConditionFormula>OR(( Units_Confirmed__c  +  Units_Cancelled__c )    &gt;   Units_Ordered__c|| Units_Confirmed__c &gt; Units_Ordered__c || Units_Cancelled__c  &gt; Units_Ordered__c )</errorConditionFormula>
    <errorMessage>Units Confirmed + Unit Cancelled can&apos;t be larger than Units Ordered.</errorMessage>
</ValidationRule>