force-app/main/default/objects/Vehicle_Purchase_Order_Line_Items__c/validationRules/Units_Ordered_cant_change_after_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Units_Ordered_cant_change_after_approval</fullName>
    <active>true</active>
    <description>Once Vehicle Purchase Order has been approved, Units Ordered can&apos;t be changed.</description>
    <errorConditionFormula>AND( 
				ISCHANGED(Units_Ordered__c), 
				OR 
				(
				    ISPICKVAL(Vehicle_Purchase_Order__r.Stage__c, &apos;Approved&apos;),
								ISPICKVAL(Vehicle_Purchase_Order__r.Stage__c, &apos;Manufacturer Confirmed&apos;),
								ISPICKVAL(Vehicle_Purchase_Order__r.Stage__c, &apos;Closed&apos;)
				)
)</errorConditionFormula>
    <errorDisplayField>Units_Ordered__c</errorDisplayField>
    <errorMessage>Once Vehicle Purchase Order has been approved, Units Ordered can&apos;t be changed.</errorMessage>
</ValidationRule>